// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The form components as a form should render properly 1`] = `
<div>
  <h1>
    React Form Elements
  </h1>
  <form>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-1-1"
      >
        My Label
      </label>
      <input
        id="id-1-1"
        name="TextBox"
        type="text"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-2-1"
      >
        My Checkbox
      </label>
      <input
        checked=""
        id="id-2-1"
        type="checkbox"
        value="as-test-check"
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-3-1"
      >
        My Date
      </label>
      <input
        id="id-3-1"
        name="TextBox"
        type="date"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-4-1"
      >
        My Range
      </label>
      <input
        id="id-4-1"
        max="100"
        min="0"
        step="1"
        type="range"
        value="50"
      />
      <span>
        50
      </span>
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-5-1"
      >
        Telephone
      </label>
      <input
        id="id-5-1"
        name="TextBox"
        type="tel"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-6-1"
      >
        My DateTime
      </label>
      <input
        id="id-6-1"
        name="TextBox"
        type="datetime"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-7-1"
      >
        My Month
      </label>
      <input
        id="id-7-1"
        name="TextBox"
        type="month"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-8-1"
      >
        My Week
      </label>
      <input
        id="id-8-1"
        name="TextBox"
        type="week"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-9-1"
      >
        My DateTime
      </label>
      <input
        id="id-9-1"
        name="TextBox"
        type="datetime-local"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-10-1"
      >
        My Time
      </label>
      <input
        id="id-10-1"
        name="TextBox"
        type="time"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-11-1"
      >
        My Drop Down
      </label>
      <select
        data-testid="dd1"
        id="id-11-1"
      >
        <optgroup
          label="First Group"
        >
          <option
            value="1"
          >
            First
          </option>
          <option
            value="2"
          >
            Second
          </option>
          <option
            value="3"
          >
            Third
          </option>
        </optgroup>
        <optgroup
          label="Second Group"
        >
          <option
            value="11"
          >
            Second First
          </option>
          <option
            value="12"
          >
            Second Second
          </option>
          <option
            value="13"
          >
            Second Third
          </option>
        </optgroup>
        <optgroup
          label="Third Group"
        >
          <option
            value="21"
          >
            Third First
          </option>
          <option
            value="22"
          >
            Third Second
          </option>
          <option
            value="23"
          >
            Third Third
          </option>
        </optgroup>
      </select>
    </div>
    <button>
      Check
    </button>
  </form>
  <div
    data-testid="ref-out"
  >
    <ul>
      <li
        data-testid="textbox"
      >
        TextBox: 
        
      </li>
      <li
        data-testid="checkbox"
      >
        Checkbox: 
        
      </li>
      <li
        data-testid="range"
      >
        Range: 
        
      </li>
      <li
        data-testid="date"
      >
        Date: 
        
      </li>
      <li
        data-testid="telephone"
      >
        Telephone: 
        
      </li>
    </ul>
  </div>
</div>
`;

exports[`The form components as a form should render properly 2`] = `
<div>
  <h1>
    React Form Elements
  </h1>
  <form>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-14-1"
      >
        My Label
      </label>
      <input
        id="id-14-1"
        name="TextBox"
        type="text"
        value="Changed Value"
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-15-1"
      >
        My Checkbox
      </label>
      <input
        checked=""
        id="id-15-1"
        type="checkbox"
        value="as-test-check"
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-16-1"
      >
        My Date
      </label>
      <input
        id="id-16-1"
        name="TextBox"
        type="date"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-17-1"
      >
        My Range
      </label>
      <input
        id="id-17-1"
        max="100"
        min="0"
        step="1"
        type="range"
        value="50"
      />
      <span>
        50
      </span>
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-18-1"
      >
        Telephone
      </label>
      <input
        id="id-18-1"
        name="TextBox"
        type="tel"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-19-1"
      >
        My DateTime
      </label>
      <input
        id="id-19-1"
        name="TextBox"
        type="datetime"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-20-1"
      >
        My Month
      </label>
      <input
        id="id-20-1"
        name="TextBox"
        type="month"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-21-1"
      >
        My Week
      </label>
      <input
        id="id-21-1"
        name="TextBox"
        type="week"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-22-1"
      >
        My DateTime
      </label>
      <input
        id="id-22-1"
        name="TextBox"
        type="datetime-local"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-23-1"
      >
        My Time
      </label>
      <input
        id="id-23-1"
        name="TextBox"
        type="time"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-24-1"
      >
        My Drop Down
      </label>
      <select
        data-testid="dd1"
        id="id-24-1"
      >
        <optgroup
          label="First Group"
        >
          <option
            value="1"
          >
            First
          </option>
          <option
            value="2"
          >
            Second
          </option>
          <option
            value="3"
          >
            Third
          </option>
        </optgroup>
        <optgroup
          label="Second Group"
        >
          <option
            value="11"
          >
            Second First
          </option>
          <option
            value="12"
          >
            Second Second
          </option>
          <option
            value="13"
          >
            Second Third
          </option>
        </optgroup>
        <optgroup
          label="Third Group"
        >
          <option
            value="21"
          >
            Third First
          </option>
          <option
            value="22"
          >
            Third Second
          </option>
          <option
            value="23"
          >
            Third Third
          </option>
        </optgroup>
      </select>
    </div>
    <button>
      Check
    </button>
  </form>
  <div
    data-testid="ref-out"
  >
    <ul>
      <li
        data-testid="textbox"
      >
        TextBox: 
        Changed Value
      </li>
      <li
        data-testid="checkbox"
      >
        Checkbox: 
        as-test-check
      </li>
      <li
        data-testid="range"
      >
        Range: 
        50
      </li>
      <li
        data-testid="date"
      >
        Date: 
        
      </li>
      <li
        data-testid="telephone"
      >
        Telephone: 
        
      </li>
    </ul>
  </div>
</div>
`;

exports[`The form components as a form should render properly c2 1`] = `
<div>
  <h1>
    React Form Elements
  </h1>
  <form>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-38-1"
      >
        My Label
      </label>
      <input
        id="id-38-1"
        name="TextBox"
        type="text"
        value="Changed Value"
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-39-1"
      >
        My Checkbox
      </label>
      <input
        checked=""
        id="id-39-1"
        type="checkbox"
        value="as-test-check"
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-40-1"
      >
        My Date
      </label>
      <input
        id="id-40-1"
        name="TextBox"
        type="date"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-41-1"
      >
        My Range
      </label>
      <input
        id="id-41-1"
        max="100"
        min="0"
        step="1"
        type="range"
        value="50"
      />
      <span>
        50
      </span>
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-42-1"
      >
        Telephone
      </label>
      <input
        id="id-42-1"
        name="TextBox"
        type="tel"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-43-1"
      >
        My DateTime
      </label>
      <input
        id="id-43-1"
        name="TextBox"
        type="datetime"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-44-1"
      >
        My Month
      </label>
      <input
        id="id-44-1"
        name="TextBox"
        type="month"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-45-1"
      >
        My Week
      </label>
      <input
        id="id-45-1"
        name="TextBox"
        type="week"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-46-1"
      >
        My DateTime
      </label>
      <input
        id="id-46-1"
        name="TextBox"
        type="datetime-local"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-47-1"
      >
        My Time
      </label>
      <input
        id="id-47-1"
        name="TextBox"
        type="time"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-48-1"
      >
        My Drop Down
      </label>
      <select
        data-testid="dd1"
        id="id-48-1"
      >
        <optgroup
          label="First Group"
        >
          <option
            value="1"
          >
            First
          </option>
          <option
            value="2"
          >
            Second
          </option>
          <option
            value="3"
          >
            Third
          </option>
        </optgroup>
        <optgroup
          label="Second Group"
        >
          <option
            value="11"
          >
            Second First
          </option>
          <option
            value="12"
          >
            Second Second
          </option>
          <option
            value="13"
          >
            Second Third
          </option>
        </optgroup>
        <optgroup
          label="Third Group"
        >
          <option
            value="21"
          >
            Third First
          </option>
          <option
            value="22"
          >
            Third Second
          </option>
          <option
            value="23"
          >
            Third Third
          </option>
        </optgroup>
      </select>
    </div>
    <button>
      Check
    </button>
  </form>
  <div
    data-testid="ref-out"
  >
    <ul>
      <li
        data-testid="textbox"
      >
        TextBox: 
        Changed Value
      </li>
      <li
        data-testid="checkbox"
      >
        Checkbox: 
        as-test-check
      </li>
      <li
        data-testid="range"
      >
        Range: 
        50
      </li>
      <li
        data-testid="date"
      >
        Date: 
        
      </li>
      <li
        data-testid="telephone"
      >
        Telephone: 
        
      </li>
    </ul>
  </div>
</div>
`;
